Fixed padding for logo on small screen.

--- a/css/overrideflatking.blue.css
+++ b/css/overrideflatking.blue.css
@@ -38,6 +38,14 @@ body {
 	font-weight: 700
 	;
 }
+.navbarlogo-small {
+	padding: 10px 0px 0px 20px;
+	line-height: 26px;
+	color: #FFF;
+	font-size: 30px;
+	font-weight: 700
+	;
+}
 #home #myhead {
     overflow: hidden;
     background-size: cover;
